--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ sysinfo.txt
 
 /Assets/__Addons/Odin/Demos
 /Assets/__Addons/Odin/Demos.meta
+ChickenDice_Unity/ProjectSettings/Packages/com.unity.probuilder/Settings.json
