--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,7 @@ ChickenDice_Unity/Assets/Art/Enviro/Brouette/M_Brouette.mat
 ChickenDice_Unity/Assets/Art/Enviro/Brouette/M_Brouette.mat.meta
 
 ChickenDice_Unity/Assets/Art/Enviro/Tonneaux/M_Tonneaux.mat.meta
+
+ChickenDice_Unity/Assets/Art/Enviro/Tonneaux/M_Tonneaux.mat
+
+ChickenDice_Unity/Assets/Art/Enviro/4x4/Sm_enviro_4x4.fbx
